tests/lexer/invalid/test_malformed_number.tok
1:1 INT_LITERAL "9999999999999999999999999999999" 0
1:32 END_OF_FILE ""
